--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
         <a href="about.html">About</a>
         <a href="#">Products</a>
         <a href="#">Blog</a>
-        <a href="#">Contact</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </footer>
   </div><!-- container -->
